2006-01-30  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/qp.c (mthca_tavor_post_recv, mthca_arbel_post_recv): Pass
	recv_cq to wq_overflow() so we lock the correct CQ.  Noticed by
	Yossi Leybovich.

2006-01-26  Roland Dreier  <rdreier@cisco.com>

	* src/mthca.h, src/verbs.c, src/cq.c, src/mthca.c: Add
	implementation of resize CQ operation.

	* src/mthca-abi.h: Add mthca-specific resize CQ ABI.

2006-01-22  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0-rc5.

2006-01-11  Jack Morgenstein  <jackm@mellanox.co.il>

	* src/verbs.c (mthca_free_pd): Free pointer to correct structure
	(we get lucky now, but don't rely on this).
	* src/mthca.c (mthca_free_context): Free context's PD so we don't
	leak it.

2006-01-06  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/verbs.c (mthca_destroy_qp): Jack Morgenstein has discovered
	the following race condition in libmthca:

	Thread A destroys QP A at the kernel side by calling
	ibv_cmd_destroy_qp, but its time-slice is over before removing it
	from the user-space qp_table removal.

	Thread B allocates QP B, receiving a QP number that matches the
	just-destroyed QP A in the low 16 bits.  Thread B will now
	over-write the slot in qp_table which was used for QP A.

	Thread A wakes up and clears qp_table slot, in effect removing QP
	B from qp_table.

	As a solution, remove the QP from qp_table before calling
	ibv_cmd_destroy_qp.  This also makes sense since operations are
	performed in the reverse order in create_qp.

	* src/cq.c (handle_error_cqe): Fill in vendor_err field for
	completions with error.

2006-01-05  Jack Morgenstein  <jackm@mellanox.co.il>

	* src/verbs.c (mthca_destroy_qp, mthca_destroy_srq): Free QP/SRQ
	object to avoid memory leak.

2005-12-15  Jack Morgenstein  <jackm@mellanox.co.il>

	* src/cq.c (mthca_cq_clean): When cleaning up a CQ, we should free
	an SRQ WQE if and only if the CQE is a receive.

2005-12-15  Michael S. Tsirkin  <mst@mellanox.co.il>
